# blocchi

./: .gitignore  Cargo.toml  LICENSE  README.md
assets/fonts/: OFL.txt
src/: consts.rs  ecs.rs  game.rs  main.rs
src/game/: tetromino.rs
